--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
    */
 
   --rich-black-fogra-29_50: hsl(210, 26%, 11%, 0.5);
-  --rich-black-fogra-29-1: hsl(210, 26%, 11%);
+  --rich-black-fogra-29-1: hsl(210deg 27.18% 14.1%);
   --rich-black-fogra-29-2: hsl(210, 50%, 4%);
   --silver-metallic: hsl(212, 9%, 67%);
   --bg-light: #e1e1e1;
