--- a/src/Components/Chat/Content/Content.css
+++ b/src/Components/Chat/Content/Content.css
@@ -6,6 +6,14 @@
 .chat_content.light{
     background: linear-gradient(132deg, #d5d88d 0%, #88b884 100%);
 }
+.chat_content.light::before{
+    background-image: url(../../../Img//pattern.svg);
+    opacity: .4;
+
+}
+.chat_content.dark::before{
+    background-image: url('../../../Img/telegram_dark.png');
+}
 .chat_content::before {
     content: "";
     position: absolute;
@@ -14,8 +22,6 @@
     width: 100%;
     height: 100%;
     background-size: contain;
-    background-image: url(../../../Img//pattern.svg);
-    opacity: .4;
 }
 
 
@@ -112,7 +118,7 @@
 
 }
 .chat_content .chat_container .chat-msg.dark{
-    background-color: var(--fc-button-active-bg-color);
+    background-color: var(--rich-black-fogra-29-1);
     margin-right: auto;
 
 }
@@ -122,7 +128,7 @@
     margin-left: auto;
 }
 .chat_content .chat_container .chat-msg.user.dark{
-    background-color: var(--coquelicot);
+    background: linear-gradient(64.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
     margin-right: 0;
     margin-left: auto;
 }
