--- a/src/Components/Chat/SideBar/SideBar.css
+++ b/src/Components/Chat/SideBar/SideBar.css
@@ -1,11 +1,28 @@
 .right-side {
     position: fixed;
     max-width: 42rem;
-    min-width: 41rem;
+    min-width: 25rem;
+    width: 40%;
     z-index: 999;
     min-height: 100vh;
     display: none;
+    transition: 1s all;
     box-shadow: 0 .1rem .1rem .1rem rgba(0 0 0 / .05);
+}
+.right-side.open{
+    display: block;
+    transform: translateX(0);
+    /* box-shadow: 0px 29px 750px 500px #00000080; */
+    transition: 1s all;
+}
+.before{
+    display: block;
+    position: absolute;
+    width: 180%;
+    height: 100%;
+    top: 0;
+    left: 100%;
+    background-color: #00000080;
 }
 .barsChat{
     display: block;
