--- a/src/Components/Chat/SideBar/SideBar.css
+++ b/src/Components/Chat/SideBar/SideBar.css
@@ -12,7 +12,6 @@
 .right-side.open{
     display: block;
     transform: translateX(0);
-    /* box-shadow: 0px 29px 750px 500px #00000080; */
     transition: 1s all;
 }
 .before{
@@ -85,6 +84,7 @@
 
 .right-side .chat_header .search-box input {
     position: relative;
+    font-size: 1.3rem;
     border: none;
     outline: none;
     width: 100%;
