--- a/src/Components/Chat/Content/Content.css
+++ b/src/Components/Chat/Content/Content.css
@@ -153,7 +153,7 @@
     left: 0;
 }
 .chat_content .chat_container .message-box {
-    position: absolute;
+    position: fixed;
     bottom: 2rem;
     left: 50%;
     transform: translateX(-50%);
