--- a/src/Components/Chat/Content/Content.css
+++ b/src/Components/Chat/Content/Content.css
@@ -1,7 +1,7 @@
 .chat_content {
     position: relative;
     width: 100%;
-    min-height: 50vh;
+    min-height: 100vh;
 }
 .chat_content.light{
     background: linear-gradient(132deg, #d5d88d 0%, #88b884 100%);
@@ -29,6 +29,7 @@
     transition: all .5s ease;
     margin-bottom: 10rem;
     margin-top: 8rem;
+    height: 68vh;
     overflow: auto;
 }
 
@@ -152,7 +153,7 @@
     left: 0;
 }
 .chat_content .chat_container .message-box {
-    position: fixed;
+    position: absolute;
     bottom: 2rem;
     left: 50%;
     transform: translateX(-50%);
